Updated the operations for leader election and also fixed bug in which the leadergroup nodes were being created in a reverse order.